Spacing and z-index fixes.

--- a/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -4,7 +4,6 @@ $main-menu-medium: $medium;
 /* Nav */
 .main-nav {
   display: none;
-  z-index: 100;
 
   @include medium {
     display: block;
@@ -29,7 +28,6 @@ $main-menu-medium: $medium;
   background-color: color('gray-300');
   border-bottom: 1px solid color('gray-400');
   position: relative;
-  z-index: 10;
 
   @include medium {
     border-bottom: none;
@@ -58,7 +56,6 @@ $main-menu-medium: $medium;
     position: absolute;
     top: 100%;
     width: 315px;
-    z-index: 1;
     font-size: 0.9rem;
   }
 
