--- a/03-organisms/site/site-header/_site-header.scss
+++ b/03-organisms/site/site-header/_site-header.scss
@@ -1,6 +1,6 @@
 .header {
   &__primary {
-    @include wrapper($v-padding: 0, $h-padding: 0);
+    @include wrapper;
 
     display: flex;
     flex-flow: row nowrap;
